# birch

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  init_table.py  main.cc  vars.bzl  version.bzl
.github/workflows/: ci.yml
bazel/: BUILD  birch.bzl
config/: BUILD  Config.cc  Config.h  ConfigPath.cc  ConfigPath.h  ConfigTest.cc  FileConfigDataSource.cc  FileConfigDataSource.h  FileConfigDataSourceTest.cc  IConfig.h  IConfigSource.h  IValueSource.h  TOOLING_PLAN.md  TomlConfig.cc  TomlConfig.h  TomlConfigSource.cc  TomlConfigSource.h  TomlConfigSourceTest.cc  TomlConfigTest.cc  ValueSources.cc  ValueSources.h  ValueSourcesTest.cc
irc/: BUILD  Capabilities.cc  Capabilities.h  CapabilitiesTest.cc  CapabilitySet.cc  CapabilitySet.h  CapabilitySetTest.cc  Channel.cc  Channel.h  ICommand.h  IrcState.cc  IrcState.h  Message.cc  Message.h  MessageTest.cc  NickRegistry.h  Session.cc  Session.h  User.h
proto/: BUILD  caps.proto  s2s.proto
server/: AsioConnection.cc  AsioConnection.h  AsioSsl.cc  AsioSsl.h  BUILD  Channel.cc  Channel.h  ChannelTest.cc  CommandHandler.h  Connection.cc  Connection.h  ConnectionList.cc  ConnectionList.h  Dispatcher.cc  Dispatcher.h  Message.cc  Message.h  MessageParser.cc  MessageParser.h  MessageParserTest.cc  MessageSerializer.cc  MessageSerializer.h  MessageTest.cc  RequestContext.cc  RequestContext.h  Server.cc  Server.h  Session.cc  Session.h  SessionConnectionObserver.cc  SessionConnectionObserver.h  Status.h  User.cc  User.h
tools/: BUILD  TestMain.cc  newclass.py
util/: BUILD  FileWatcher.cc  IFileWatcher.h  InotifyFileWatcher.cc  InotifyFileWatcher.h  KqueueFileWatcher.cc  KqueueFileWatcher.h  KqueueFileWatcherTest.cc  NoopFileWatcher.cc  NoopFileWatcher.h  Observable.h  ObservableTest.cc  WinFileWatcher.cc  WinFileWatcher.h  WinFileWatcherTest.cc
