"""Birch IRC daemon — dependencies via Bazel Central Registry (bzlmod)."""

module(
    name = "birch",
    version = "0.0.0",
)

bazel_dep(name = "abseil-cpp", version = "20260107.1")
bazel_dep(name = "asio", version = "1.34.2.bcr.0")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "spdlog", version = "1.17.0")
bazel_dep(name = "tclap", version = "1.2.5.bcr.1")
