"""Birch IRC daemon — dependencies via Bazel Central Registry (bzlmod)."""

module(
    name = "birch",
    version = "0.1.0",
)

# Register our version extension so that we can use our module version in code.
version_ext = use_extension("//:version.bzl", "version_extension")
use_repo(version_ext, "birch_version")

bazel_dep(name = "abseil-cpp", version = "20260107.1")
bazel_dep(name = "asio", version = "1.34.2.bcr.1")
bazel_dep(name = "aspect_rules_lint", version = "2.5.2")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "tomlplusplus", version = "3.4.0")
